@@ -875,7 +875,8 @@ Usage   : COMPRESS (ON/OFF)\n\r\
 Example : compress\n\r\
 Example : compress off\n\r\
 Short(s): \n\r\
-Toggles whether compressed room and equipment descriptions are shown. \
+Toggles whether compressed room and equipment descriptions are shown \
+in a squished form, where items are shown as a continuous paragraph.  \
 See also the BRIEF command. When combined with BRIEF, will result in \
 an even shorter view that excludes room descriptions and full item and \
 mob displays in favor of name lists.
@@ -1820,6 +1821,17 @@ Changes whether you see normal combat messages, including standard weapon \
 hits and misses, and most damage messages.  When turned on, the player \
 will only receive a brief summary of all damage taken by each combatant. \
 By itself, this command will \
+toggle the state of the flag.  Use ON or OFF to specify whether the flag \
+is on or off.  See also CONFIG.
+
+NOSPAM=\
+Command : NOSPAM (ON/OFF)\n\r\
+Usage   : NOSPAM\ (ON/OFF)n\r\
+Example : nospam\n\r\
+Example : nospam on\n\r\
+Short(s): \n\r\
+Changes whether you see some normal spammy messages, such as when others \
+are just looking around.  By itself, this command will \
 toggle the state of the flag.  Use ON or OFF to specify whether the flag \
 is on or off.  See also CONFIG.
 
